--- a/hotel.html
+++ b/hotel.html
@@ -67,11 +67,11 @@
     <!-- Why choose our trusted site for information on your next adventure? -->
     <section class="trusted">
         <div class="container">
-            <div class="trusted-wrapper">
+            <div class="trusted-wrapper" data-aos="fade-up">
                 <h3>Γιατί να επιλέξετε τον αξιόπιστο ιστότοπο μας για πληροφορίες σχετικά με την επόμενη περιπέτειά σας;
                 </h3>
             </div>
-            <div class="trusted-inner">
+            <div class="trusted-inner" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="trusted-col">
@@ -122,18 +122,18 @@
     <!-- Browse our collection of top hotels in Greece -->
     <section class="collection-hotels">
         <div class="container">
-            <div class="collection">
+            <div class="collection" data-aos="fade-up">
                 <h3>Περιηγηθείτε στη συλλογή των κορυφαίων ξενοδοχείων στην Ελλάδα </h3>
             </div>
             <div class="collection-wrapper">
-                <div class="row">
+                <div class="row" data-aos="fade-up">
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-right">
                             <img src="images/Amanzoe.jpg" alt="cover">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-left">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Amanzoe, Πόρτο Χέλι</h2>
                                 <p class="collection-mb-30"> Το Amanzoe είναι ένα εντυπωσιακό θέρετρο με θέα στο Αιγαίο
@@ -146,10 +146,10 @@
                     </div>
                 </div>
             </div>
-            <div class="collection-wrapper onecess">
+            <div class="collection-wrapper onecess" data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-right">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Ξενοδοχείο Κατικιές, Οία, Σαντορίνη</h2>
                                 <p class="collection-mb-30"> Το Katikies Hotel βρίσκεται στο εμβληματικό χωριό της Οίας,
@@ -161,22 +161,22 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-left">
                             <img src="images/Katikies.jpg" alt="cover">
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="collection-wrapper">
+            <div class="collection-wrapper"  data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-right">
                             <img src="images/Blue.jpg" alt="cover">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-left">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Blue Palace, a Luxury Collection Resort, Ελούντα, Κρήτη
                                 </h2>
@@ -193,10 +193,10 @@
                     </div>
                 </div>
             </div>
-            <div class="collection-wrapper onecess">
+            <div class="collection-wrapper onecess"  data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-right">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Poseidonion Grand Hotel, Σπέτσες</h2>
                                 <p class="collection-mb-30"> Ένα ιστορικό ξενοδοχείο στο γραφικό νησί των Σπετσών,
@@ -210,22 +210,22 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-left">
                             <img src="images/Poseidonion_Exterior.jpeg" alt="cover">
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="collection-wrapper">
+            <div class="collection-wrapper"  data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-right">
                             <img src="images/Canaves.jpg" alt="cover">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-left">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Canaves Oia Hotel, Σαντορίνη
                                 </h2>
@@ -239,10 +239,10 @@
                     </div>
                 </div>
             </div>
-            <div class="collection-wrapper onecess">
+            <div class="collection-wrapper onecess"  data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-right">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Bill & Coo Suites and Lounge, Μύκονος</h2>
                                 <p class="collection-mb-30"> Ένα boutique ξενοδοχείο στη Μύκονο, γνωστό για τον
@@ -254,22 +254,22 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-left">
                             <img src="images/Bill-Coo-Suites-Mykonos-5.jpg" alt="cover">
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div class="collection-wrapper">
+            <div class="collection-wrapper"  data-aos="fade-up">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="collection-about-photo">
+                        <div class="collection-about-photo" data-aos="fade-right">
                             <img src="images/Santa.jpg" alt="cover">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="collection-about-text">
+                        <div class="collection-about-text" data-aos="fade-right">
                             <div class="collection-title-frame">
                                 <h2 class="collection-mb-20">Santa Marina, a Luxury Collection Resort, Μύκονος
                                 </h2>
@@ -290,7 +290,7 @@
     <!-- Before planning -->
     <section class="planning">
         <div class="container">
-            <div class="planning-wrapper">
+            <div class="planning-wrapper" data-aos="fade-up">
                 <p>Πριν προγραμματίσετε τη διαμονή σας, ενθαρρύνουμε πάντα τους επισκέπτες να επικοινωνούν με την
                     επιβεβαίωση της κράτησής τους με το επιλεγμένο ξενοδοχείο ή ομάδα φιλοξενίας. Ελέγξτε τις πιο
                     πρόσφατες κριτικές και αξιολογήσεις για να βεβαιωθείτε ότι παρέχονται οι πιο ενημερωμένες
