--- a/resorts.html
+++ b/resorts.html
@@ -136,7 +136,8 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo" target="_blank"><img src="images/Hote-p.jpg" alt="" class="img-fluid"></a>
+                                    <a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo"
+                                        target="_blank"><img src="images/Hote-p.jpg" alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
                                 <h2 class="title"><a href="https://www.montecarlosbm.com/fr/hotel-monaco/hotel-paris-monte-carlo 
@@ -197,8 +198,8 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                    <a href="https://www.wynnlasvegas.com/" target="_blank"> <img src="images/Wynn.jpg" alt=""
-                                            class="img-fluid"></a>
+                                    <a href="https://www.wynnlasvegas.com/" target="_blank"> <img src="images/Wynn.jpg"
+                                            alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
                                 <h2 class="title"><a href="https://www.wynnlasvegas.com/" target="_blank">Γουίν Λας
@@ -252,7 +253,8 @@
                         <div class="col-lg-4">
                             <div class="trusted-col">
                                 <div class="img1">
-                                  <a href="https://www.galaxymacau.com/" target="_blank">  <img src="images/Galaxy.jpg" alt="" class="img-fluid"></a>
+                                    <a href="https://www.galaxymacau.com/" target="_blank"> <img src="images/Galaxy.jpg"
+                                            alt="" class="img-fluid"></a>
                                     <div class="icon"><i class="bi bi-bar-chart"></i></div>
                                 </div>
                                 <h2 class="title"><a href="https://www.galaxymacau.com/" target="_blank">Galaxy
@@ -269,7 +271,51 @@
         </div>
     </section>
 
-
+    <div class="dropdown__section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 mb-5">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Ο ολοκληρωμένος οδηγός μας για τα τυχερά παιχνίδια:
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample" style="">
+                                <div class="accordion-body">
+                                    <p>Συνιστούμε σε όλους τους παίκτες να εξοικειωθούν με τους κανόνες και τις
+                                        στρατηγικές του παιχνιδιού
+                                        που παίζεται. Η κατανόηση των αποχρώσεων αυξάνει τις πιθανότητές σας να λάβετε
+                                        τεκμηριωμένες
+                                        αποφάσεις. </p>
+                                    <p><span>Κατανοώντας τις πιθανότητες: </span>Κάθε παιχνίδι έχει τις δικές του
+                                        αποδόσεις. Η κατανόηση
+                                        της πιθανότητας νίκης μπορεί να επηρεάσει τη στρατηγική σας. Εστιάστε σε
+                                        παιχνίδια για τα οποία
+                                        έχετε τις περισσότερες γνώσεις και απολαμβάνετε να παίζετε. </p>
+                                    <p><span>Εξετάστε τα πολλαπλά στοιχήματα:</span>Σκεφτείτε το ενδεχόμενο να
+                                        κατανείμετε τα στοιχήματά
+                                        σας σε πολλές επιλογές. Αυτό μπορεί να βοηθήσει στη διαχείριση των κινδύνων και
+                                        να αυξήσει τις
+                                        δυνατότητες για συνολικό κέρδος.
+                                    </p>
+                                    <p>Θυμηθείτε, ο τζόγος πρέπει να είναι μια μορφή ψυχαγωγίας και οι πρακτικές
+                                        υπεύθυνου παιχνιδιού
+                                        συμβάλλουν σε μια πιο ευχάριστη και βιώσιμη εμπειρία. Να δίνετε πάντα
+                                        προτεραιότητα στη διασκέδαση
+                                        έναντι του οικονομικού κέρδους και να προσεγγίζετε τον τζόγο με συνειδητή και
+                                        ενημερωμένη στάση.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- site footer start -->
     <div class="footer">
         <div class="container">
