--- a/game.html
+++ b/game.html
@@ -123,7 +123,7 @@
                 <h3>Τα καλύτερα ξενοδοχεία καζίνο στην Ελλάδα
                 </h3>
             </div>
-            <div class="trusted-inner" >
+            <div class="trusted-inner">
                 <div class="row" data-aos="fade-up">
                     <div class="col-lg-3">
                         <div class="trusted-col">
@@ -183,6 +183,10 @@
                         </div>
                     </div>
                 </div>
+
+                <p>Πριν αποφασίσετε να επισκεφτείτε, βεβαιωθείτε ότι ελέγχετε τις πιο πρόσφατες πληροφορίες, κριτικές
+                    και οποιεσδήποτε πιθανές αλλαγές στην κατάσταση ή τις παροχές αυτών των καζίνο
+                </p>
             </div>
         </div>
     </section>
