--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -286,7 +286,7 @@
             <div class="footer-mails">
               <div class="mails-names">
                 <i class="fa-solid fa-envelope" style="color: #efab00;"></i>
-                <a href="mailto">info@στοίχημαένα.com </a>
+                <a href="mailto:info@στοίχημαένα.com">info@στοίχημαένα.com </a>
               </div>
             </div>
           </div>
