--- a/game.html
+++ b/game.html
@@ -184,7 +184,7 @@
                     </div>
                 </div>
 
-                <p>Πριν αποφασίσετε να επισκεφτείτε, βεβαιωθείτε ότι ελέγχετε τις πιο πρόσφατες πληροφορίες, κριτικές
+                <p class="barnd">Πριν αποφασίσετε να επισκεφτείτε, βεβαιωθείτε ότι ελέγχετε τις πιο πρόσφατες πληροφορίες, κριτικές
                     και οποιεσδήποτε πιθανές αλλαγές στην κατάσταση ή τις παροχές αυτών των καζίνο
                 </p>
             </div>
