--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <img src="images/hotelcard2.jpeg" class="img-fluid" alt="hotelcard2">
             </div>
             <div class="cuisine__part">
-              <h4>Poseidonion</h4>
+              <h4>Poseidonion Grand</h4>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
               <img src="images/hotelcard4.jpg" class="img-fluid" alt="hotelcard4">
             </div>
             <div class="cuisine__part">
-              <h4>Bill-Coo-Hotel</h4>
+              <h4>Bill & Coo Hotel</h4>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
               <img src="images/hotelcard5.jpg" class="img-fluid" alt="hotelcard5">
             </div>
             <div class="cuisine__part">
-              <h4>Montecarlosbm</h4>
+              <h4>Monte-Carlo Bay Hotel</h4>
             </div>
           </div>
         </div>
@@ -158,7 +158,7 @@
               <img src="images/hotelcard6.jpg" class="img-fluid" alt="hotelcard6">
             </div>
             <div class="cuisine__part">
-              <h4>Paris-Monte-Carlo</h4>
+              <h4>Hôtel de Paris Monte-Carlo</h4>
             </div>
           </div>
         </div>
@@ -170,7 +170,7 @@
               <img src="images/hotelcard7.jpg" class="img-fluid" alt="hotelcard7">
             </div>
             <div class="cuisine__part">
-              <h4>Wynnlasvegas</h4>
+              <h4> Wynn Las Vegas</h4>
             </div>
           </div>
         </div>
@@ -180,7 +180,7 @@
               <img src="images/hotelcard8.jpg" class="img-fluid" alt="hotelcard8">
             </div>
             <div class="cuisine__part">
-              <h4>Clubhotelloutraki</h4>
+              <h4>Club Hotel Casino Loutraki</h4>
             </div>
           </div>
         </div>
