--- a/hotel.html
+++ b/hotel.html
@@ -76,7 +76,7 @@
                     <div class="col-lg-4">
                         <div class="trusted-col">
                             <div class="img1">
-                                <img src="images/about-mission.jpg" alt="" class="img-fluid">
+                                <img src="images/unbeatcard1.jpeg" alt="unbeatcard1" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
                             <h2 class="title"><a href="#"> Ασυναγώνιστη επιλογή </a></h2>
@@ -88,7 +88,7 @@
                     <div class="col-lg-4">
                         <div class="trusted-col">
                             <div class="img1">
-                                <img src="images/about-mission.jpg" alt="" class="img-fluid">
+                                <img src="images/unbeatcard2.jpg" alt="unbeatcard2" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
                             <h2 class="title"><a href="#"> Λεπτομερείς συγκρίσεις</a></h2>
@@ -102,7 +102,7 @@
                     <div class="col-lg-4">
                         <div class="trusted-col">
                             <div class="img1">
-                                <img src="images/about-mission.jpg" alt="" class="img-fluid">
+                                <img src="images/unbeatcard3.jpeg" alt="unbeatcard3" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
                             <h2 class="title"><a href="#">Πληροφορίες προορισμού</a></h2>
