--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample" style="">
+                data-bs-parent="#accordionExample" >
                 <div class="accordion-body">
                   <p>Συνιστούμε σε όλους τους παίκτες να εξοικειωθούν με τους κανόνες και τις στρατηγικές του παιχνιδιού
                     που παίζεται. Η κατανόηση των αποχρώσεων αυξάνει τις πιθανότητές σας να λάβετε τεκμηριωμένες
