--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/aos.css">
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <title>στοίχημαένα</title>
+  <title>Αρχική σελίδα</title>
 </head>
 
 <body>
