--- a/hotel.html
+++ b/hotel.html
@@ -79,7 +79,7 @@
                                 <img src="images/unbeatcard1.jpeg" alt="unbeatcard1" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
-                            <h2 class="title"><a href="#"> Ασυναγώνιστη επιλογή </a></h2>
+                            <h2 class="title">Ασυναγώνιστη επιλογή</h2>
                             <p> Εξερευνήστε την επιλεγμένη μας επιλογή της crème de la crème στην ελληνική φιλοξενία.
                                 Από τα ηλιόλουστα νησιά μέχρι την ιστορική ηπειρωτική χώρα, η πλατφόρμα μας παρουσιάζει
                                 μια ποικιλία από ξενοδοχεία, το καθένα με τη μοναδική του γοητεία και χαρακτήρα. </p>
@@ -91,7 +91,7 @@
                                 <img src="images/unbeatcard2.jpg" alt="unbeatcard2" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
-                            <h2 class="title"><a href="#"> Λεπτομερείς συγκρίσεις</a></h2>
+                            <h2 class="title">Λεπτομερείς συγκρίσεις</h2>
                             <p> Οι λεπτομερείς συγκρίσεις μας παρέχουν πληθώρα πληροφοριών στα χέρια σας. Από τις
                                 ανέσεις δωματίων και τις επιλογές φαγητού μέχρι τις εγκαταστάσεις αναψυχής και τις
                                 υπηρεσίες σπα, καλύπτουμε κάθε πτυχή για να σας βοηθήσουμε να βρείτε το τέλειο ταίρι για
@@ -105,7 +105,7 @@
                                 <img src="images/unbeatcard3.jpeg" alt="unbeatcard3" class="img-fluid">
                                 <div class="icon"><i class="bi bi-bar-chart"></i></div>
                             </div>
-                            <h2 class="title"><a href="#">Πληροφορίες προορισμού</a></h2>
+                            <h2 class="title">Πληροφορίες προορισμού</h2>
                             <p> Σκοπεύετε να εξερευνήσετε την Αθήνα, τη Σαντορίνη, τη Μύκονο ή οποιονδήποτε άλλο
                                 ελληνικό προορισμό; Οι οδηγοί προορισμών μας παρέχουν πολύτιμες πληροφορίες για τα
                                 τοπικά αξιοθέατα, διασφαλίζοντας ότι θα αξιοποιήσετε στο έπακρο την ελληνική σας
