--- a/hotel.html
+++ b/hotel.html
@@ -233,7 +233,7 @@
                                     σε σπηλιές με εκπληκτική θέα στην Καλντέρα και προσωπικές
                                     υπηρεσίες. </p>
                                 <a href="Blue Palace, a Luxury Collection Resort, Ελούντα, Κρήτη 
-                                " class="https://canaves.com/" target="_blank">Διαβάστε περισσότερα </a>
+                                " class="knsl-btn knsl-btn-md"  target="_blank">Διαβάστε περισσότερα </a>
                             </div>
                         </div>
                     </div>
@@ -277,8 +277,7 @@
                                     πρόσβαση σε ιδιωτική παραλία, πολυτελείς βίλες και μια ποικιλία από υψηλής ποιότητας
                                     ανέσεις. </p>
                                 <a href="Blue Palace, a Luxury Collection Resort, Ελούντα, Κρήτη 
-                                " class=" https://www.marriott.com/en-us/hotels/jmklc-santa-marina-a-luxury-co llection-resort-mykonos/overview/?scid=f2ae0541-1279-4f24-b197-a9 79c79310b0 
-                                " target="_blank">Διαβάστε περισσότερα </a>
+                                " class="knsl-btn knsl-btn-md" target="_blank">Διαβάστε περισσότερα </a>
                             </div>
                         </div>
                     </div>
